Day_3/Lesson_5_oidc/deployment/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: oidc-gateway
  namespace: oidc
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: ${PORT}
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: oidc
spec:
  parentRefs:
    - name: oidc-gateway
  hostnames:
    - ${KEYCLOAK_HOST}
  rules:
    - backendRefs:
        - name: keycloak
          port: ${PORT}
